# 42sh

./: .__afs7B78  .__afsE4EB  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  main.c  remove.sh  text.c
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
src/: .__afs9A99  .__afs9C39  Makefile  Makefile.am  Makefile.in  main.c  t.sh  test.sh  tests.sh
src/ast/: Makefile  Makefile.am  Makefile.in  ast.c  ast.h
src/ast/case/: ast_case.c  ast_case.h
src/ast/cmd/: ast_cmd.c  ast_cmd.h
src/ast/cmd/.deps/: libast_a-ast_cmd.Po
src/ast/func/: ast_func.c  ast_func.h
src/ast/if/: ast_if.c  ast_if.h
src/ast/list/: ast_list.c  ast_list.h
src/ast/loop/: ast_loop.c  ast_loop.h
src/ast/not/: ast_not.c  ast_not.h
src/ast/operator/: ast_operator.c  ast_operator.h
src/ast/pipe/: ast_pipe.c  ast_pipe.h
src/ast/redir/: ast_redir.c  ast_redir.h
src/ast/subshells/: ast_sub.c  ast_sub.h
src/ast/variable/: ast_variable.c  ast_variable.h
src/builtins/: Makefile  Makefile.am  Makefile.in  builtins.c  builtins.h
src/exec/: Makefile  Makefile.am  Makefile.in  exec.c  exec.h
src/exec_tree/: Makefile  Makefile.am  Makefile.in  exec_tree.c  exec_tree.h
src/exec_tree/var_utils/: var_utils.c  var_utils.h
src/exec_tree/variables/: variable.c  variable.h  variable_new.c  variable_new.h
src/lexer/: Makefile  Makefile.am  Makefile.in  a.out  lexer.c  lexer.h
src/parser/: Makefile  Makefile.am  Makefile.in  main.c  parser.c  parser.h  utils.h
src/parser/input/: input.c  input.h
src/parser/input/.deps/: libparser_a-input.Po
src/parser/list/: parser_list.c  parser_list.h
src/parser/list/.deps/: libparser_a-parser_list.Po
src/parser/loops/: parser_loops.c
src/parser/shell_cmd/: parser_shell_cmd.c  parser_shell_cmd.h
src/parser/shell_cmd/.deps/: libparser_a-parser_shell_cmd.Po
src/parser/shell_cmd/case/: parser_case.c  parser_case.h
src/parser/shell_cmd/if/: parser_if.c  parser_if.h
src/parser/shell_cmd/if/.deps/: libparser_a-parser_if.Po
src/parser/shell_cmd/loops/: parser_for.c  parser_for.h  parser_loops.c  parser_loops.h
src/parser/simple_cmd/: parser_simple_cmd.c  parser_simple_cmd.h
src/parser/simple_cmd/.deps/: libparser_a-parser_simple_cmd.Po
src/pretty_print/: Makefile.am  Makefile.in  a.out  pretty_print.c  pretty_print.h  pretty_print2.c
src/utils/: Makefile.am  utils.c  utils.h  utils_main.c  utils_main.h
tests/: Makefile  Makefile.am  Makefile.in  test_exec_tree.c  test_pretty_print.c  tester.py
tests/categories/exec_tree/: test_exec_tree.c  tests.sh
tests/categories/execution/: test_if3.sh
tests/categories/execution/break_continue/: test10.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test8.sh  test9.sh
tests/categories/execution/cases/: test_fail.sh  test_multiple_patterns.sh  test_no_star.sh  test_star_first.sh  test_start_not_there.sh  test_static.sh
tests/categories/execution/dot/: test1.sh
tests/categories/execution/echo/: test_big_echo.sh  test_echo2.sh  test_echo3.sh  test_echo4.sh  test_echo5.sh  test_echo6.sh  test_echo7.sh  test_lots_of_words.sh  test_newline.sh
tests/categories/execution/exit/: test4.sh  test5.sh  test6.sh  test7.sh
tests/categories/execution/for/: test_seq1.sh  test_seq2.sh  test_seq3.sh  test_seq4.sh  test_seq5.sh  tests.sh
tests/categories/execution/functions/: test_arg_passing.sh  test_base.sh  test_fun_in_fun.sh  test_func_with_exec.sh  test_generic.sh  test_return_val.sh
tests/categories/execution/if/: test_elif.sh  test_elif_else.sh  test_else.sh  test_multiple_then_echo.sh  test_newline.sh  test_true_false.sh  tests.sh
tests/categories/execution/multiple_command/: test_echo_if.sh  test_multiple_echo.sh  test_nested_if.sh  test_return_values.sh
tests/categories/execution/not/: test_net3.sh  test_net4.sh
tests/categories/execution/not_working/: test_env.sh  test_if4.sh
tests/categories/execution/operator/: if_and.sh  if_or.sh  (+8 more)
tests/categories/lexer/: test_lexer1.sh  test_lexer10.sh  test_lexer11.sh  test_lexer12.sh  test_lexer13.sh  test_lexer14.sh  test_lexer15.sh  test_lexer16.sh  test_lexer17.sh  test_lexer18.sh  test_lexer2.sh  test_lexer3.sh  test_lexer4.sh  test_lexer5.sh  test_lexer6.sh  test_lexer7.sh  test_lexer8.sh  test_lexer9.sh
tests/categories/parser/: test.c
tests/categories/pretty_print/: test_pretty_print.c
tests/parser/: test.c
(+34 files in other folders)
